--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "bitcent",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@mantine/core": "^7.15.2",
-    "@mantine/dates": "^7.15.2",
-    "@mantine/hooks": "^7.15.2",
-    "@tabler/icons-react": "^3.26.0",
-    "dayjs": "^1.11.13",
-    "firebase": "^11.1.0",
-    "next": "15.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "uuid": "^11.0.3"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/uuid": "^10.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "bitcent",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@tabler/icons-react": "^3.26.0",
+		"@mantine/core": "^5.8.2",
+		"@mantine/dates": "^5.8.2",
+		"@mantine/hooks": "^5.8.2",
+		"@mantine/next": "^5.8.2",
+		"dayjs": "^1.11.13",
+		"firebase": "^11.1.0",
+		"next": "15.1.3",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"uuid": "^11.0.3"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@types/uuid": "^10.0.0",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.3",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
