--- a/package.json
+++ b/package.json
@@ -20,18 +20,24 @@
 		"next": "15.1.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"uuid": "^11.0.3"
+		"uuid": "^11.0.3",
+		"sharp": "^0.33.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"@types/uuid": "^10.0.0",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.3",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
+	},
+	"optionalDependencies": {
+		"@img/sharp-linux-x64": "^0.33.2"
+	},
+	"engines": {
+		"node": "18.x"
 	}
 }
